refactor: 优化元数据管理系统架构
- 删除无用的 QueryMetadataProvider 接口，简化 Provider 类设计
- 删除 MetadataScannerConfiguration 配置类（无实际功能）
- 新增 MetadataService，将业务逻辑从 Controller 移至 Service 层
- 简化 MetadataController，仅保留接口层职责
- 优化资源描述管理，从硬编码 switch 改为在 Provider 中定义
- QueryConditionSupport 新增资源描述存储和获取功能
- QueryMetadataBuilder 新增 description() 方法支持资源描述
- 更新所有 Provider 类，添加资源描述定义
- 优化 parseNumber 方法，使用 Class.cast() 替代直接强转

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>